<resources>
    <string name="app_name">开源中国</string>

    <string name="main_tab_name_news">综合</string>
    <string name="main_tab_name_tweet">动弹</string>
    <string name="main_tab_name_quick">快速</string>
    <string name="main_tab_name_question">问答</string>
    <string name="main_tab_name_my">我</string>
    <string name="main_tab_name_explore">发现</string>

    <!-- slide menu -->
    <string name="menu_rss">订阅</string>
    <string name="menu_opensoft">开源软件</string>
    <string name="menu_blog">博客区</string>
    <string name="menu_quests">技术问答</string>
    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出</string>

    <string name="gitapp">Git客户端</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <!-- qucik option -->
    <string name="quick_option_text">文字</string>
    <string name="quick_option_album">相册</string>
    <string name="quick_option_photo">拍照</string>
    <string name="quick_option_voice">语音</string>
    <string name="quick_option_note">便签</string>
    <string name="quick_option_scan">扫一扫</string>
    <string name="quick_option_find">找人</string>

    <string name="actionbar_title_search">搜索</string>

    <string name="active">好友圈</string>
    <string name="activities">活动</string>
    <string name="scan">扫一扫</string>
    <string name="friends">同城</string>
    <string name="find_oscer">找人</string>
    <string name="shake">摇一摇</string>

    <string name="blog">博客</string>
    <string name="information">资料</string>
    <string name="qrcode">二维码</string>
    <string name="message">消息</string>
    <string name="team">团队</string>
    <string name="note">便签</string>
    <string name="bookmarks">收藏夹</string>
    <string name="user_score">积分</string>

    <string name="my_information_unlogin_tips">未登录</string>

    <string name="actionbar_title_profile">个人中心</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="join_time">加入时间:</string>
    <string name="location">所在地区:</string>
    <string name="development_platform">开发平台:</string>
    <string name="academic_focus">专长领域:</string>

    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
</resources>
