<?xml version="1.0" encoding="utf-8"?>
<student.oschinaxwj.widget.CustomerScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rl_active"
            style="@style/option_item_rl"
            android:layout_marginTop="@dimen/space_20">

            <ImageView
                style="@style/option_item_img"
                android:layout_marginRight="@dimen/space_10"
                android:background="@mipmap/icon_explore_friends"
                android:contentDescription="@null" />

            <TextView
                style="@style/option_item_text"
                android:text="@string/active" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_find_osc"
            style="@style/option_item_rl"
            android:layout_marginTop="@dimen/space_20">

            <ImageView
                style="@style/option_item_img"
                android:layout_marginRight="@dimen/space_10"
                android:background="@mipmap/icon_explore_finduser"
                android:contentDescription="@null" />

            <TextView
                style="@style/option_item_text"
                android:text="@string/find_oscer" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_divider_color"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/rl_city"
            style="@style/option_item_rl"
            android:visibility="gone">

            <ImageView
                style="@style/option_item_img"
                android:background="@mipmap/icon_explore_samecity"
                android:contentDescription="@null" />

            <TextView
                style="@style/option_item_text"
                android:text="@string/friends" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_divider_color" />

        <LinearLayout
            android:id="@+id/rl_activities"
            style="@style/option_item_rl">

            <ImageView
                style="@style/option_item_img"
                android:background="@mipmap/icon_explore_event"
                android:contentDescription="@null" />

            <TextView
                style="@style/option_item_text"
                android:text="@string/activities" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_divider_color" />

        <LinearLayout
            android:id="@+id/rl_scan"
            style="@style/option_item_rl"
            android:layout_marginTop="@dimen/space_20">

            <ImageView
                style="@style/option_item_img"
                android:background="@mipmap/icon_explore_scan"
                android:contentDescription="@null" />

            <TextView
                style="@style/option_item_text"
                android:text="@string/scan" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_divider_color" />

        <LinearLayout
            android:id="@+id/rl_shake"
            style="@style/option_item_rl">

            <ImageView
                style="@style/option_item_img"
                android:background="@mipmap/icon_explore_shake"
                android:contentDescription="@null" />

            <TextView
                style="@style/option_item_text"
                android:text="@string/shake" />
        </LinearLayout>
    </LinearLayout>

</student.oschinaxwj.widget.CustomerScrollView>